--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         }
         header .logo img {
             height: 40px; /* Adjust the height as needed */
+            left: 20 px;
         }
         nav ul {
             list-style: none;
