--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
         }
 
         /* Media Queries */
-        @media (max-width: 500px) {
+        @media (max-width: 220px) {
             nav ul {
                 display: none;
                 flex-direction: column;
                 position: absolute;
                 top: 60px;
-                left: 0;
+                left: 20px;
                 width: 100%;
                 background-color: #000;
                 padding: 10px 0;
