--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
             nav ul.active {
                 display: flex;
             }
+            .welcome {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            font-size: 2em;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 10px 20px;
+            border-radius: 10px;
+        }
             nav ul li {
                 text-align: center;
                 margin: 10px 0;
