--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background: #000; /* Changed to black */
+            background: #000;
             color: #fff;
             padding: 10px 0;
         }
@@ -22,7 +22,7 @@
             padding: 0 20px;
         }
         header .logo img {
-            height: 40px; /* Adjust the height as needed */
+            height: 40px;
         }
         nav ul {
             list-style: none;
@@ -84,17 +84,26 @@
             border-radius: 10px;
         }
         .menu {
-            display: flex;
-            flex-wrap: wrap;
             padding: 20px;
-            justify-content: space-around;
         }
         .menu-category {
-            flex-basis: 100%;
             text-align: center;
             margin: 20px 0 10px;
             font-size: 1.5em;
             font-weight: bold;
+            cursor: pointer;
+            padding: 10px;
+            border: 1px solid #ddd;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: background-color 0.3s;
+        }
+        .menu-category:hover {
+            background-color: #f9f9f9;
+        }
+        .menu-items {
+            display: none;
+            flex-wrap: wrap;
+            justify-content: space-around;
         }
         .menu-item {
             border: 1px solid #ddd;
@@ -193,7 +202,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo-url.png" alt="Logo"> <!-- Replace logo-url.png with the actual URL of the logo image -->
+                <img src="logo-url.png" alt="Logo">
             </div>
             <nav>
                 <ul>
@@ -209,9 +218,9 @@
     <main>
         <div class="slider">
             <div class="slides">
-                <img src="slide1-url.jpg" alt="Slide 1" class="active"> <!-- Replace slide1-url.jpg with the actual URL of the slide image -->
-                <img src="slide2-url.jpg" alt="Slide 2"> <!-- Replace slide2-url.jpg with the actual URL of the slide image -->
-                <img src="slide3-url.jpg" alt="Slide 3"> <!-- Replace slide3-url.jpg with the actual URL of the slide image -->
+                <img src="slide1-url.jpg" alt="Slide 1" class="active">
+                <img src="slide2-url.jpg" alt="Slide 2">
+                <img src="slide3-url.jpg" alt="Slide 3">
             </div>
             <div class="welcome">
                 <h1>Welcome to Banjo's the Food Chain</h1>
@@ -219,202 +228,213 @@
         </div>
 
         <div class="menu">
-            <!-- Beverages -->
-            <div class="menu-category">Beverages</div>
-            <div class="menu-item">
-                <h3>Thick Cold Coffee</h3>
-                <p>69</p>
-                <button>Book</button>
+            <div class="menu-category" onclick="toggleMenu('beverages')">Beverages</div>
+            <div class="menu-items" id="beverages">
+                <div class="menu-item">
+                    <h3>Thick Cold Coffee</h3>
+                    <p>69</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Hot Chocolate</h3>
+                    <p>69</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Lemon Iced Tea</h3>
+                    <p>79</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Strawberry Iced Tea</h3>
+                    <p>109</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Mint Mojito</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Blueberry Mojito</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Mango Milkshake</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Strawberry Milkshake</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Oreo Milkshake</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Kitkat Milkshake</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>Hot Chocolate</h3>
-                <p>69</p>
-                <button>Book</button>
+
+            <div class="menu-category" onclick="toggleMenu('sandwiches')">Sandwiches</div>
+            <div class="menu-items" id="sandwiches">
+                <div class="menu-item">
+                    <h3>Chilli Garlic Toast</h3>
+                    <p>49</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Veg Grilled Sandwich</h3>
+                    <p>79</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Tandoori Paneer Sandwich</h3>
+                    <p>129</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Veg Cheese Grilled Sandwich</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Veg Club Sandwich</h3>
+                    <p>179</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Omelette Sandwich</h3>
+                    <p>79</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Grilled Sandwich</h3>
+                    <p>129</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Makhani Sandwich</h3>
+                    <p>149</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Club Sandwich</h3>
+                    <p>239</p>
+                    <button>Book</button>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>Lemon Iced Tea</h3>
-                <p>79</p>
-                <button>Book</button>
+
+            <div class="menu-category" onclick="toggleMenu('fries')">Fries</div>
+            <div class="menu-items" id="fries">
+                <div class="menu-item">
+                    <h3>French Fries Plain</h3>
+                    <p>99</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Masala Fries</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chilli Garlic Fries</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Peri Peri Fries</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Cheesy Fries</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>Strawberry Iced Tea</h3>
-                <p>109</p>
-                <button>Book</button>
+
+            <div class="menu-category" onclick="toggleMenu('maggi')">Maggi</div>
+            <div class="menu-items" id="maggi">
+                <div class="menu-item">
+                    <h3>Masala Maggi</h3>
+                    <p>59</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Butter Masala Maggi</h3>
+                    <p>69</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Cheese Maggi</h3>
+                    <p>79</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Vegetable Maggi</h3>
+                    <p>99</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Maggi</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>Mint Mojito</h3>
-                <p>119</p>
-                <button>Book</button>
+
+            <div class="menu-category" onclick="toggleMenu('tasty-bites')">Tasty Bites</div>
+            <div class="menu-items" id="tasty-bites">
+                <div class="menu-item">
+                    <h3>Red Cheese Pasta</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Potato Cheese Shots (5 pcs)</h3>
+                    <p>109</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>White Cheese Pasta</h3>
+                    <p>149</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Cheese Corn Balls (6 pcs)</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Nuggets (6 pcs)</h3>
+                    <p>139</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Cheese Balls (6 pcs)</h3>
+                    <p>149</p>
+                    <button>Book</button>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>Blueberry Mojito</h3>
-                <p>119</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Mango Milkshake</h3>
-                <p>119</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Strawberry Milkshake</h3>
-                <p>119</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Oreo Milkshake</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Kitkat Milkshake</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <!-- Sandwiches -->
-            <div class="menu-category">Sandwiches</div>
-            <div class="menu-item">
-                <h3>Chilli Garlic Toast</h3>
-                <p>49</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Veg Grilled Sandwich</h3>
-                <p>79</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Tandoori Paneer Sandwich</h3>
-                <p>129</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Veg Cheese Grilled Sandwich</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Veg Club Sandwich</h3>
-                <p>179</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Omelette Sandwich</h3>
-                <p>79</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Grilled Sandwich</h3>
-                <p>129</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Makhani Sandwich</h3>
-                <p>149</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Club Sandwich</h3>
-                <p>239</p>
-                <button>Book</button>
-            </div>
-            <!-- Fries -->
-            <div class="menu-category">Fries</div>
-            <div class="menu-item">
-                <h3>French Fries Plain</h3>
-                <p>99</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Masala Fries</h3>
-                <p>119</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chilli Garlic Fries</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Peri Peri Fries</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Cheesy Fries</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <!-- Maggi -->
-            <div class="menu-category">Maggi</div>
-            <div class="menu-item">
-                <h3>Masala Maggi</h3>
-                <p>59</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Butter Masala Maggi</h3>
-                <p>69</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Cheese Maggi</h3>
-                <p>79</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Vegetable Maggi</h3>
-                <p>99</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Maggi</h3>
-                <p>119</p>
-                <button>Book</button>
-            </div>
-            <!-- Tasty Bites -->
-            <div class="menu-category">Tasty Bites</div>
-            <div class="menu-item">
-                <h3>Red Cheese Pasta</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Potato Cheese Shots (5 pcs)</h3>
-                <p>109</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>White Cheese Pasta</h3>
-                <p>149</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Cheese Corn Balls (6 pcs)</h3>
-                <p>119</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Nuggets (6 pcs)</h3>
-                <p>139</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Cheese Balls (6 pcs)</h3>
-                <p>149</p>
-                <button>Book</button>
-            </div>
-            <!-- Salads -->
-            <div class="menu-category">Salads</div>
-            <div class="menu-item">
-                <h3>Veg Salad</h3>
-                <p>159</p>
-                <button>Book</button>
-            </div>
-            <div class="menu-item">
-                <h3>Chicken Salad</h3>
-                <p>189</p>
-                <button>Book</button>
+
+            <div class="menu-category" onclick="toggleMenu('salads')">Salads</div>
+            <div class="menu-items" id="salads">
+                <div class="menu-item">
+                    <h3>Veg Salad</h3>
+                    <p>159</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Salad</h3>
+                    <p>189</p>
+                    <button>Book</button>
+                </div>
             </div>
         </div>
     </main>
@@ -429,6 +449,11 @@
             menu.classList.toggle('active');
             const btn = document.querySelector('.mobile-menu-btn');
             btn.classList.toggle('active');
+        }
+
+        function toggleMenu(category) {
+            const menu = document.getElementById(category);
+            menu.classList.toggle('active');
         }
     </script>
     <script>
@@ -449,7 +474,7 @@
             showSlide(currentSlide);
         }
 
-        setInterval(nextSlide, 4000); // Change image every 4 seconds
+        setInterval(nextSlide, 4000);
     </script>
 </body>
 </html>
