--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             flex-wrap: wrap;
             justify-content: space-around;
         }
+        .menu-items.active {
+            display: flex;
+        }
         .menu-item {
             border: 1px solid #ddd;
             padding: 10px;
