--- a/index.html
+++ b/index.html
@@ -4,134 +4,308 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banjo's Food Chain</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
-
         header {
-            background-color: #333;
+            background: #000;
             color: #fff;
             padding: 10px 0;
-            text-align: center;
         }
-
+        header .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+        header .logo img {
+            height: 40px;
+        }
         nav ul {
-            list-style-type: none;
+            list-style: none;
+            margin: 0;
             padding: 0;
-            text-align: center;
+            display: flex;
         }
-
         nav ul li {
-            display: inline;
-            margin: 0 10px;
+            margin-right: 20px;
         }
-
         nav ul li a {
             color: #fff;
             text-decoration: none;
         }
-
-        .mobile-menu-btn {
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
             display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
         }
-
-        .slides {
-            display: flex;
-            overflow: hidden;
-            width: 100%;
-            height: 300px;
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
         }
-
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+        .slider {
+            position: relative;
+            max-width: 100%;
+            margin: 20px auto;
+        }
         .slides img {
             width: 100%;
             display: none;
         }
-
         .slides img.active {
             display: block;
         }
-
+        .welcome {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            font-size: 2em;
+            padding: 10px 20px;
+            border-radius: 10px;
+        }
+        .menu {
+            padding: 20px;
+        }
         .menu-category {
-            background-color: #f4f4f4;
+            text-align: center;
+            margin: 20px 0 10px;
+            font-size: 1.5em;
+            font-weight: bold;
             cursor: pointer;
             padding: 10px;
-            margin: 5px 0;
+            border: 1px solid #ddd;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: background-color 0.3s;
         }
-
+        .menu-category:hover {
+            background-color: #f9f9f9;
+        }
         .menu-items {
             display: none;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+        .menu-items.active {
+            display: flex;
+        }
+        .menu-item {
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin: 10px;
+            flex: 1 1 calc(30% - 20px);
+            box-sizing: border-box;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
+        }
+        .menu-item:hover {
+            transform: scale(1.05);
+        }
+        .menu-item h3 {
+            margin: 0 0 10px;
+        }
+        .menu-item p {
             margin: 10px 0;
         }
-
-        .menu-items.active {
-            display: block;
+        .menu-item button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 5px;
         }
-
-        .menu-item {
-            margin: 5px 0;
+        .menu-item button:hover {
+            background-color: #45a049;
         }
-
-        .section {
-            display: none;
-        }
-
-        .section.active-section {
-            display: block;
-        }
-
-        form div {
-            margin-bottom: 10px;
-        }
-
         footer {
+            background: #333;
+            color: #fff;
             text-align: center;
             padding: 10px 0;
-            background-color: #333;
-            color: #fff;
-            position: fixed;
-            bottom: 0;
+            margin-top: 20px;
+        }
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        section {
+            padding: 20px;
+        }
+        #about {
+            display: none;
+        }
+        #contact {
+            display: none;
+        }
+        .active-section {
+            display: block;
+        }
+        form {
+            max-width: 600px;
+            margin: auto;
+        }
+        form div {
+            margin-bottom: 15px;
+        }
+        form label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        form input, form textarea {
             width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+        form button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 5px;
+        }
+        form button:hover {
+            background-color: #45a049;
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            nav ul {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 60px;
+                left: 20px;
+                width: 100%;
+                background-color: #000;
+                padding: 10px 0;
+                z-index: 1000;
+            }
+            nav ul.active {
+                display: flex;
+            }
+            .mobile-menu-btn {
+                display: block;
+                position: absolute;
+                top: 15px;
+                right: 20px;
+                cursor: pointer;
+                z-index: 1500;
+                color: #fff;
+                font-size: 1.5em;
+            }
+            .mobile-menu-btn.active {
+                color: #4CAF50;
+            }
+            nav ul li {
+                text-align: center;
+                margin: 10px 0;
+            }
+            .menu-item {
+                flex: 1 1 calc(45% - 20px);
+            }
+        }
+
+        @media (max-width: 550px) {
+            .menu-item {
+                flex: 1 1 calc(100% - 20px);
+            }
+            .welcome {
+                font-size: 1.5em;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Banjo's Food Chain</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#" onclick="showSection('home')">Home</a></li>
-            <li><a href="#" onclick="showSection('about')">About</a></li>
-            <li><a href="#" onclick="showSection('contact')">Contact</a></li>
-        </ul>
-    </nav>
-    <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
-    <main>
-        <div id="home" class="section active-section">
-            <div class="slides">
-                <img src="slide1.jpg" alt="Slide 1" class="active">
-                <img src="slide2.jpg" alt="Slide 2">
-                <img src="slide3.jpg" alt="Slide 3">
+        <div class="container">
+            <div class="logo">
+                <img src="logo-url.png" alt="Logo">
             </div>
+            <nav>
+                <ul>
+                    <li><a href="#home" onclick="showSection('home')">Home</a></li>
+                    <li><a href="#about" onclick="showSection('about')">About</a></li>
+                    <li><a href="#contact" onclick="showSection('contact')">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
+        </div>
+    </header>
+
+    <main>
+        <div id="home">
+            <div class="slider">
+                <div class="slides">
+                    <img src="slide1-url.jpg" alt="Slide 1" class="active">
+                    <img src="slide2-url.jpg" alt="Slide 2">
+                    <img src="slide3-url.jpg" alt="Slide 3">
+                </div>
+                <div class="welcome">
+                    <h1>Welcome to Banjo's the Food Chain</h1>
+                </div>
+            </div>
+
             <div class="menu">
                 <div class="menu-category" onclick="toggleMenu('beverages')">Beverages</div>
                 <div class="menu-items" id="beverages">
                     <div class="menu-item">
-                        <h3>Masala Lemonade</h3>
-                        <p>49</p>
+                        <h3>Thick Cold Coffee</h3>
+                        <p>69</p>
                         <button>Book</button>
                     </div>
                     <div class="menu-item">
-                        <h3>Cold Coffee</h3>
-                        <p>99</p>
+                        <h3>Hot Chocolate</h3>
+                        <p>69</p>
                         <button>Book</button>
                     </div>
                     <div class="menu-item">
-                        <h3>Banana Milkshake</h3>
+                        <h3>Lemon Iced Tea</h3>
+                        <p>79</p>
+                        <button>Book</button>
+                    </div>
+                    <div class="menu-item">
+                        <h3>Strawberry Iced Tea</h3>
+                        <p>109</p>
+                        <button>Book</button>
+                    </div>
+                    <div class="menu-item">
+                        <h3>Mint Mojito</h3>
+                        <p>119</p>
+                        <button>Book</button>
+                    </div>
+                    <div class="menu-item">
+                        <h3>Blueberry Mojito</h3>
+                        <p>119</p>
+                        <button>Book</button>
+                    </div>
+                    <div class="menu-item">
+                        <h3>Mango Milkshake</h3>
                         <p>119</p>
                         <button>Book</button>
                     </div>
@@ -276,28 +450,25 @@
                 <div class="menu-category" onclick="toggleMenu('salads')">Salads</div>
                 <div class="menu-items" id="salads">
                     <div class="menu-item">
-                        <h3>Green Salad</h3>
-                        <p>49</p>
-                        <button>Book</button>
-                    </div>
-                    <div class="menu-item">
-                        <h3>Vegetable Salad</h3>
-                        <p>79</p>
+                        <h3>Veg Salad</h3>
+                        <p>159</p>
                         <button>Book</button>
                     </div>
                     <div class="menu-item">
                         <h3>Chicken Salad</h3>
-                        <p>119</p>
+                        <p>189</p>
                         <button>Book</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="about" class="section">
+
+        <section id="about" class="active-section">
             <h2>About Banjo's Food Chain</h2>
-            <p>Banjo's Food Chain is a leading fast-food restaurant known for its delicious and diverse menu. We offer a wide range of items from beverages to sandwiches, fries, maggi, tasty bites, and salads. Our commitment to quality and customer satisfaction sets us apart. We strive to provide our customers with the best dining experience by using fresh ingredients and unique recipes.</p>
-        </div>
-        <div id="contact" class="section">
+            <p>Banjo's Food Chain is a leading food service provider known for its diverse menu and delicious offerings. We are dedicated to delivering high-quality food and exceptional service to our customers. Our menu features a wide range of options, including beverages, sandwiches, fries, maggi, tasty bites, and salads, ensuring that there is something for everyone. At Banjo's, we prioritize freshness and quality, using only the best ingredients to prepare our dishes. Join us for a delightful dining experience!</p>
+        </section>
+
+        <section id="contact" class="active-section">
             <h2>Contact Us</h2>
             <form>
                 <div>
@@ -310,33 +481,55 @@
                 </div>
                 <div>
                     <label for="message">Message:</label>
-                    <textarea id="message" name="message" required></textarea>
+                    <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <button type="submit">Send</button>
+                <button type="submit">Submit</button>
             </form>
-        </div>
+        </section>
     </main>
-    <footer>
-        <p>&copy; 2024 Banjo's Food Chain</p>
-    </footer>
-    <script>
-        function showSection(sectionId) {
-            const sections = document.querySelectorAll('.section');
-            sections.forEach(section => {
-                section.classList.remove('active-section');
-            });
-            document.getElementById(sectionId).classList.add('active-section');
-        }
 
+    <footer>
+        Designed and Animated by <a href="https://www.skyoudtechnologies.com">Skyoud Technologies</a>
+    </footer>
+
+    <script>
         function toggleMobileMenu() {
             const menu = document.querySelector('nav ul');
-            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+            menu.classList.toggle('active');
+            const btn = document.querySelector('.mobile-menu-btn');
+            btn.classList.toggle('active');
         }
 
-        function toggleMenu(categoryId) {
-            const menuItems = document.getElementById(categoryId);
-            menuItems.classList.toggle('active');
+        function toggleMenu(category) {
+            const menu = document.getElementById(category);
+            menu.classList.toggle('active');
         }
+
+        function showSection(section) {
+            document.querySelectorAll('section').forEach(sec => {
+                sec.classList.remove('active-section');
+            });
+            document.getElementById(section).classList.add('active-section');
+        }
+
+        let currentSlide = 0;
+        const slides = document.querySelectorAll('.slides img');
+
+        function showSlide(index) {
+            slides.forEach((slide, i) => {
+                slide.classList.remove('active');
+                if (i === index) {
+                    slide.classList.add('active');
+                }
+            });
+        }
+
+        function nextSlide() {
+            currentSlide = (currentSlide + 1) % slides.length;
+            showSlide(currentSlide);
+        }
+
+        setInterval(nextSlide, 4000);
     </script>
 </body>
 </html>
