--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <img src="slide3-url.jpg" alt="Slide 3">
             </div>
             <div class="welcome">
-                <h1>Welcome to Banjo's the food Chain</h1>
+                <h1>Welcome to Banjo's the Chain</h1>
             </div>
         </div>
 
