--- a/index.html
+++ b/index.html
@@ -439,6 +439,175 @@
                     <button>Book</button>
                 </div>
             </div>
+             <div class="menu-category" onclick="toggleMenu('pizzas')">Pizzas</div>
+            <div class="menu-items" id="pizzas">
+                <div class="menu-item">
+                    <h3>Cheese Margarita Pizza</h3>
+                    <p>149 (Regular) / 199 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Cheese and Corn Pizza</h3>
+                    <p>179 (Regular) / 229 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Tandoori Paneer Pizza</h3>
+                    <p>149 (Regular)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Veg Delight Pizza</h3>
+                    <p>189 (Regular) / 239 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Classic Pizza</h3>
+                    <p>199 (Regular) / 249 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Delight Pizza</h3>
+                    <p>229 (Regular) / 279 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Makhani Pizza</h3>
+                    <p>249 (Regular) / 299 (Large)</p>
+                    <button>Book</button>
+                </div>
+            </div>
+
+            <div class="menu-category" onclick="toggleMenu('burgers')">Burgers</div>
+            <div class="menu-items" id="burgers">
+                <div class="menu-item">
+                    <h3>Veg Burger</h3>
+                    <p>79 (Regular) / 99 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Burger</h3>
+                    <p>129 (Regular) / 149 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Spinach Corn Burger</h3>
+                    <p>99 (Regular) / 119 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Tandoori Paneer Burger</h3>
+                    <p>119 (Regular) / 139 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Makhani Burger</h3>
+                    <p>129 (Regular) / 149 (Large)</p>
+                    <button>Book</button>
+                </div>
+            </div>
+
+            <div class="menu-category" onclick="toggleMenu('rolls')">Rolls</div>
+            <div class="menu-items" id="rolls">
+                <div class="menu-item">
+                    <h3>Veg Roll</h3>
+                    <p>79 (Regular) / 99 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Egg Roll (Double)</h3>
+                    <p>69 (Regular) / 89 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Roll</h3>
+                    <p>119 (Regular) / 139 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Paneer Makhni Roll</h3>
+                    <p>139 (Regular) / 159 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Makhani Roll</h3>
+                    <p>159 (Regular) / 179 (Large)</p>
+                    <button>Book</button>
+                </div>
+            </div>
+
+            <div class="menu-category" onclick="toggleMenu('desserts')">Desserts</div>
+            <div class="menu-items" id="desserts">
+                <div class="menu-item">
+                    <h3>Choco Lava Cake</h3>
+                    <p>119</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Walnut Brownie</h3>
+                    <p>129</p>
+                    <button>Book</button>
+                </div>
+            </div>
+
+            <!-- Additional Items -->
+            <div class="menu-category" onclick="toggleMenu('banjos')">Banjos</div>
+            <div class="menu-items" id="banjos">
+                <div class="menu-item">
+                    <h3>Garden Green Banjo</h3>
+                    <p>109 (Regular) / 129 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Spinach Corn Banjo</h3>
+                    <p>119 (Regular) / 139 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Tandoori Paneer Banjo</h3>
+                    <p>149</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>The Food Chain</h3>
+                    <p>169</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Omelette Banjo</h3>
+                    <p>79 (Regular) / 99 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Banjo</h3>
+                    <p>149 (Regular) / 169 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Makhani Banjo</h3>
+                    <p>169 (Regular) / 189 (Large)</p>
+                    <button>Book</button>
+                </div>
+            </div>
+
+            <div class="menu-category" onclick="toggleMenu('momos')">Momos</div>
+            <div class="menu-items" id="momos">
+                <div class="menu-item">
+                    <h3>Veg Momo</h3>
+                    <p>99 (Regular) / 119 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Paneer Momo</h3>
+                    <p>119 (Regular) / 139 (Large)</p>
+                    <button>Book</button>
+                </div>
+                <div class="menu-item">
+                    <h3>Chicken Classic Momo</h3>
+                    <p>119 (Regular) / 139 (Large)</p>
+                    <button>Book</button>
+                </div>
+            </div>
         </div>
     </main>
 
