--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="menu-category" onclick="toggleMenu('beverages')">Beverages</div>
             <div class="menu-items" id="beverages">
                 <div class="menu-item">
-                    <img src="thick-cold-coffee-url.jpg" alt="Thick Cold Coffee">
+                    <img src="thick-cold-coffee-url.jpg" width="100" height="100" alt="Thick Cold Coffee">
                     <h3>Thick Cold Coffee</h3>
                     <p>69</p>
                     <button>Book</button>
