--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
             width: 100%;
             border-radius: 5px;
         }
+        .menu-item img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+        
         .menu-item button:hover {
             background-color: #45a049;
         }
