--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
             width: 100%;
             border-radius: 5px;
         }
+        
+.menu-item {
+    text-align: center;
+}
         .menu-item img {
     width: 100px;
     height: 100px;
