--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
                 padding: 10px 0;
                 z-index: 1000;
             }
+            .slider {
+            position: relative;
+            max-width: 100%;
+            margin: 20px auto;
+            }
             nav ul.active {
                 display: flex;
             }
