--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #000; /* Black background */
             color: #fff;
             padding: 10px 0;
         }
@@ -41,14 +41,19 @@
         }
 
         nav ul li a {
-            color: #fff;
+            color: #fff; /* White text */
             text-decoration: none;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
         }
 
         .mobile-menu-btn {
             display: none;
             font-size: 24px;
             cursor: pointer;
+            color: #fff;
         }
 
         @media (max-width: 768px) {
@@ -78,6 +83,7 @@
             margin: 0 auto;
             font-size: 18px;
             line-height: 1.6;
+            text-align: justify; /* Justify text */
         }
     </style>
 </head>
