--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             display: flex;
         }
         nav ul li {
-            margin-right: 15px;
+            margin-right: 0 15px;
         }
         nav ul li a {
             color: #fff;
