--- a/index.html
+++ b/index.html
@@ -146,7 +146,15 @@
     border-radius: 10px;
 }
         
-        
+        .menu-item button:hover {
+            background-color: #45a049;
+        }
+        .mobile-menu-btn {
+            display: none;
+            font-size: 24px;
+            cursor: pointer;
+            color: #fff;
+        }
         footer {
             background: #333;
             color: #fff;
