--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
         }
         .slider {
             position: relative;
-            max-width: 50%;
+            max-width: 80%;
             margin: 20px auto;
+            max-height: 30%;
         }
         .slides img {
             width: 100%;
