--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
