--- a/index.html
+++ b/index.html
@@ -61,17 +61,12 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
-        .slider {
-    position: relative;       /* Keeps the slider positioned relative to its container */
-    max-width: 80%;           /* Sets the maximum width to 80% of its container */
-    margin: 20px auto;        /* Centers the slider horizontally and adds 20px top and bottom margin */
-    max-height: 10%;          /* Sets the maximum height to 10% of its container */
-    overflow: hidden;         /* Hides any overflow content */
-    border: 2px solid #ccc;   /* Adds a border to the slider */
-    border-radius: 10px;      /* Rounds the corners of the slider */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow for depth */
-    background-color: #f9f9f9; /* Sets a background color */
-}
+       .slider {
+            position: relative;
+            max-width: 50%;
+            margin: 20px auto;
+            max-height: 10%;
+        } 
         .slides img {
             width: 100%;
             display: none;
