--- a/about.html
+++ b/about.html
@@ -98,6 +98,13 @@
                 padding: 10px 0;
                 z-index: 1000;
             }
+            .about p {
+            max-width: 600px;
+            margin: 0 auto;
+            font-size: 18px;
+            line-height: 1.6;
+            text-align: justify; /* Justify text */
+        }
             .slider {
             position: relative;
             max-width: 100%;
@@ -127,11 +134,19 @@
                 flex: 1 1 calc(45% - 20px);
             }
         }
+        
 
         @media (max-width: 550px) {
             .menu-item {
                 flex: 1 1 calc(100% - 20px);
             }
+            .about p {
+            max-width: 600px;
+            margin: 0 auto;
+            font-size: 18px;
+            line-height: 1.6;
+            text-align: justify; /* Justify text */
+        }
             .welcome {
                 font-size: 1.5em;
             }
