--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
             }
             .about p {
             max-width: 300px;
-            margin: 0 auto;
+            margin: 10px;
             font-size: 18px;
             line-height: 1.6;
             text-align: justify; /* Justify text */
