--- a/about.html
+++ b/about.html
@@ -98,6 +98,11 @@
                 padding: 10px 0;
                 z-index: 1000;
             }
+            .about {
+            padding: 50px 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
             .about p {
             max-width: 300px;
             margin: 10px;
