--- a/about.html
+++ b/about.html
@@ -145,6 +145,11 @@
             .menu-item {
                 flex: 1 1 calc(100% - 20px);
             }
+            .about {
+            padding: 50px 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
             .about p {
             max-width: 600px;
             margin: 0 auto;
