--- a/contact.html
+++ b/contact.html
@@ -218,5 +218,8 @@
             menuItems.style.display = menuItems.style.display === 'block' ? 'none' : 'block';
         }
     </script>
+    <footer>
+        Designed and Animated by <a href="https://www.skyoudtechnologies.com">Skyoud Technologies</a>
+    </footer>
 </body>
 </html>
