--- a/about.html
+++ b/about.html
@@ -55,20 +55,6 @@
             cursor: pointer;
             color: #fff;
         }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-        footer a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
 
         @media (max-width: 768px) {
             nav ul {
@@ -100,12 +86,28 @@
             text-align: justify; /* Justify text */
         }
 
-        .about .additional-content {
-            max-width: 600px;
-            margin: 20px auto;
+        .vision,
+        .mission {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            margin: 20px 0;
+        }
+
+        .vision h2,
+        .mission h2 {
+            font-size: 24px;
+            color: #333;
+            margin-bottom: 15px;
+            text-align: center;
+        }
+
+        .vision p,
+        .mission p {
             font-size: 16px;
-            line-height: 1.5;
-            text-align: left;
+            line-height: 1.6;
+            color: #666;
         }
 
         @media (max-width: 768px) {
@@ -113,26 +115,14 @@
                 padding: 30px 20px;
             }
 
-            .about p, .about .additional-content {
+            .about p {
                 max-width: 100%;
                 margin: 0 10px;
             }
 
-            nav ul {
-                position: absolute;
-                top: 60px;
-                left: 20px;
-                width: calc(100% - 40px);
-                background-color: #000;
-                padding: 10px 0;
-                z-index: 1000;
-            }
-
-            .mobile-menu-btn {
-                position: absolute;
-                top: 15px;
-                right: 20px;
-                z-index: 1500;
+            .vision,
+            .mission {
+                padding: 20px;
             }
         }
 
@@ -141,9 +131,24 @@
                 padding: 20px 15px;
             }
 
-            .about p, .about .additional-content {
+            .about p {
                 margin: 0 10px;
                 font-size: 16px;
+            }
+
+            .vision,
+            .mission {
+                padding: 15px;
+            }
+
+            .vision h2,
+            .mission h2 {
+                font-size: 20px;
+            }
+
+            .vision p,
+            .mission p {
+                font-size: 14px;
             }
         }
     </style>
@@ -168,10 +173,12 @@
     <section class="about">
         <p>We operate franchises of Banjo's The Food Chain and Creamy Nuts, based in Nashik and Pune respectively, under the firm Ritesh Patil & Sons. Our first quick-service restaurant is strategically located between the towns of Savda and Faizpur to attract young customers. We provide a serene, beautifully designed interior with a dark theme, spacious floor area, and a mezzanine floor, creating an inviting and stylish atmosphere.</p>
 
-        <div class="additional-content">
+        <div class="vision">
             <h2>Our Vision</h2>
             <p>Our vision is to expand our presence across more towns and cities, bringing quality food and a unique dining experience to every community we serve.</p>
+        </div>
 
+        <div class="mission">
             <h2>Our Mission</h2>
             <p>Our mission is to consistently deliver exceptional service, innovate our menu offerings, and maintain a vibrant and welcoming environment for our customers.</p>
         </div>
@@ -183,8 +190,5 @@
             nav.classList.toggle('active');
         }
     </script>
-    <footer>
-        Designed and Animated by <a href="https://www.skyoudtechnologies.com">Skyoud Technologies</a>
-    </footer>
 </body>
 </html>
