--- a/about.html
+++ b/about.html
@@ -6,165 +6,122 @@
     <title>About Us</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
-        header {
-            background-color: #000; /* Black background */
-            color: #fff;
-            padding: 10px 0;
-        }
+header {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 0;
+}
 
-        .container {
-            width: 90%;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
 
-        .logo img {
-            width: 150px;
-        }
+.logo img {
+    width: 150px;
+}
 
-        nav ul {
-            list-style: none;
-            display: flex;
-            margin: 0;
-            padding: 0;
-        }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-        nav ul li {
-            margin: 0 15px;
-        }
+nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
 
-        nav ul li a {
-            color: #fff; /* White text */
-            text-decoration: none;
-        }
+nav ul li {
+    margin: 0 15px;
+}
 
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
 
-        .mobile-menu-btn {
-            display: none;
-            font-size: 24px;
-            cursor: pointer;
-            color: #fff;
-        }
+nav ul li a:hover {
+    text-decoration: underline;
+}
 
-        @media (max-width: 768px) {
-            nav ul {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-            }
+.mobile-menu-btn {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+}
 
-            nav ul.active {
-                display: flex;
-            }
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-            .mobile-menu-btn {
-                display: block;
-            }
-        }
+    .mobile-menu-btn {
+        display: block;
+    }
 
-        .section {
-            padding: 50px 20px;
-            text-align: center;
-        }
+    nav ul {
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        background-color: #000;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        right: 0;
+    }
 
-        .section-intro {
-            background-color: #f4f4f4;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-bottom: 20px;
-        }
+    nav ul.show {
+        display: flex;
+    }
 
-        .section h2 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 15px;
-            text-align: center;
-        }
+    nav ul li {
+        margin: 10px 0;
+    }
 
-        .section p {
-            max-width: 600px;
-            margin: 0 auto;
-            font-size: 18px;
-            line-height: 1.6;
-            text-align: justify;
-        }
+    .contact {
+        padding: 20px 0;
+    }
 
-        .vision,
-        .mission {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-bottom: 20px;
-        }
+    .contact-form {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+}
 
-        .vision h2,
-        .mission h2 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 15px;
-            text-align: center;
-        }
+.about {
+    padding: 50px 0;
+    background-color: #f4f4f4;
+    text-align: center;
+}
 
-        .vision p,
-        .mission p {
-            font-size: 16px;
-            line-height: 1.6;
-            color: #666;
-        }
+.about h2 {
+    margin-bottom: 20px;
+}
 
-        @media (max-width: 768px) {
-            .section {
-                padding: 30px 20px;
-            }
+.vision, .mission {
+    margin-bottom: 40px;
+}
 
-            .section p {
-                max-width: 100%;
-                margin: 0 10px;
-            }
+.vision h3, .mission h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
 
-            .vision,
-            .mission {
-                padding: 20px;
-            }
-        }
+.vision p, .mission p {
+    color: #666;
+    font-size: 16px;
+}
 
-        @media (max-width: 550px) {
-            .section {
-                padding: 20px 15px;
-            }
-
-            .section p {
-                margin: 0 10px;
-                font-size: 16px;
-            }
-
-            .vision,
-            .mission {
-                padding: 15px;
-            }
-
-            .vision h2,
-            .mission h2 {
-                font-size: 20px;
-            }
-
-            .vision p,
-            .mission p {
-                font-size: 14px;
-            }
-        }
     </style>
 </head>
 <body>
