--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
     </header>
 
     <section class="section section-intro">
-        <h2>Welcome to Ritesh Patil & Sons</h2>
+        <h2>Welcome to Banjos-The Food Chain</h2>
         <p>We operate franchises of Banjo's The Food Chain and Creamy Nuts, based in Nashik and Pune respectively. Our first quick-service restaurant is strategically located between the towns of Savda and Faizpur to attract young customers. We provide a serene, beautifully designed interior with a dark theme, spacious floor area, and a mezzanine floor, creating an inviting and stylish atmosphere.</p>
     </section>
 
