--- a/about.html
+++ b/about.html
@@ -219,5 +219,8 @@
             nav.classList.toggle('active');
         }
     </script>
+    <footer>
+        Designed and Animated by <a href="https://www.skyoudtechnologies.com">Skyoud Technologies</a>
+    </footer>
 </body>
 </html>
